# Offroad-Nav

./: .gitignore  LICENSE  README.md  index.html
assets/: easy.usd  edges.usd  hard.usd  medium.usd
docker/: Dockerfile.monodepth  Dockerfile.navstack  README.md  docker-compose.yml  docker_run.sh  docker_run_monodepth.sh
mono_depth/: README.md
mono_depth/src/depth_rescaling/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
mono_depth/src/depth_rescaling/config/: depth_estimation.yaml  nav_depth_cam0.yaml  nav_depth_cam1.yaml  nav_depth_cam2.yaml  nav_depth_estimation.yaml  pcl_registration_cfg.yaml
mono_depth/src/depth_rescaling/docker/: source_depth.sh
mono_depth/src/depth_rescaling/launch/: depth_estimation.launch  nav_depth_2cams.launch  nav_depth_estimation.launch
mono_depth/src/depth_rescaling/scripts/: launch_mono_depth.sh  launch_stereo_depth.sh
nav_stack/: README.md
nav_stack/src/Barakuda/axis_ptz_driver/: README.md
nav_stack/src/Barakuda/axis_ptz_driver/axis_camera/: CMakeLists.txt  package.xml
nav_stack/src/Barakuda/axis_ptz_driver/axis_camera/launch/: axis.launch  axis_mod.launch
nav_stack/src/Barakuda/axis_ptz_driver/axis_camera/nodes/: axis_camera_node
nav_stack/src/Barakuda/axis_ptz_driver/axis_camera/src/: stream_to_topic.cpp
nav_stack/src/Barakuda/axis_ptz_driver/axis_camera/src/axis_camera/: axis_camera.py  axis_ptz.py  comp_img_to_img.py
nav_stack/src/Barakuda/barakuda_bringup/: CMakeLists.txt  README.md  package.xml
nav_stack/src/Barakuda/barakuda_bringup/config/lidarrealparams/: barakuda_driver.yaml  costmap_global.yaml  costmap_local.yaml  dlio_params.yaml  emc_core_param.yaml  emc_setup.yaml  move_base.yaml  robot_localisation_global.yaml  rtp.yaml  sbg.yaml  teb_default.yaml
nav_stack/src/Barakuda/barakuda_bringup/config/lidarsimtuned/: astar_default.yaml  barakuda_control.yaml  barakuda_manager.yaml  costmap_global.yaml  costmap_local.yaml  dlio_input.yaml  emc_core_param.yaml  emc_plugin_config_easy.yaml  emc_plugin_config_hard.yaml  emc_plugin_config_medium.yaml  emc_setup.yaml  ntrip.yaml  ptz.yaml  teb_default.yaml  waypoint_manager.yml  zed.yaml
nav_stack/src/Barakuda/barakuda_bringup/config/monovins/: astar_default.yaml  emc_core_param.yaml  emc_plugin_config.yaml  emc_setup.yaml  navsat_transform.yaml  robot_localisation_local.yaml  urdf.yaml
nav_stack/src/Barakuda/barakuda_bringup/doc/: barakuda_bringup.drawio
nav_stack/src/Barakuda/barakuda_bringup/launch/: base.launch.xml  lidar_real_params.launch  lidar_sim_tuned.launch  mono_vins.launch
nav_stack/src/Barakuda/barakuda_bringup/launch/modules/: localisation.launch.xml  manager.launch.xml  navigation.launch.xml  sensors.launch.xml
nav_stack/src/Barakuda/barakuda_bringup/rviz/: Mobilex.rviz  Mobilex2_test.rviz  barakuda.rviz  barakuda_teb.rviz  loc.rviz  nav_olivier_gpu.rviz
nav_stack/src/Barakuda/barakuda_description/: CMakeLists.txt  README.md  package.xml
nav_stack/src/Barakuda/barakuda_manager/: CMakeLists.txt  README.md  package.xml
nav_stack/src/Barakuda/barakuda_node/: CMakeLists.txt  README.md  package.xml
nav_stack/src/Barakuda/barakuda_vision/: CMakeLists.txt  README.md  package.xml
nav_stack/src/Barakuda/dlio/: CMakeLists.txt
nav_stack/src/Barakuda/elevation_mapping_cupy/: elev_csf_17032025.patch
nav_stack/src/Barakuda/mbf_gridmap/: LICENSE  README.md
nav_stack/src/Barakuda/mbf_gridmap/mbf_gridmap_core/: CMakeLists.txt  package.xml
nav_stack/src/Barakuda/mbf_gridmap/mbf_gridmap_core/include/mbf_gridmap_core/: grid_map_handler.h  gridmap_controller.h  gridmap_planner.h  gridmap_recovery.h
nav_stack/src/Barakuda/mbf_gridmap/mbf_gridmap_costmap_wrapper/: CMakeLists.txt  mb_gridmap_layer.xml  package.xml  wrapper_global_planner.xml  wrapper_local_planner.xml
nav_stack/src/Barakuda/mbf_gridmap/mbf_gridmap_costmap_wrapper/configs/: MBGridmapLayer.cfg  log.conf  nav_config_example.yaml
nav_stack/src/Barakuda/mbf_gridmap/mbf_gridmap_costmap_wrapper/include/mbf_gridmap_costmap_wrapper/: movebase_gridmap_layer.hpp  wrapper_global_planner.hpp  wrapper_local_planner.hpp
nav_stack/src/Barakuda/mbf_gridmap/mbf_gridmap_costmap_wrapper/launch/: mbf_gridmap_wrapper_example.launch
nav_stack/src/Barakuda/mbf_gridmap/mbf_gridmap_costmap_wrapper/plugins/: movebase_gridmap_layer.cpp  wrapper_global_planner.cpp  wrapper_local_planner.cpp
nav_stack/src/Barakuda/mbf_gridmap/mbf_gridmap_nav/: CMakeLists.txt  package.xml
nav_stack/src/Barakuda/mbf_gridmap/mbf_gridmap_nav/cfg/: MoveBaseFlex.cfg
nav_stack/src/Barakuda/mbf_gridmap/mbf_gridmap_nav/include/mbf_gridmap_nav/: gridmap_controller_execution.h  gridmap_navigation_server.h  gridmap_planner_execution.h  gridmap_recovery_execution.h
nav_stack/src/Barakuda/mbf_gridmap/mbf_gridmap_nav/src/: gridmap_controller_execution.cpp  gridmap_navigation_server.cpp  gridmap_node.cpp  gridmap_planner_execution.cpp  gridmap_recovery_execution.cpp
nav_stack/src/Barakuda/virtual_costmap_layer/: CMakeLists.txt  README.md  package.xml
nav_stack/src/Barakuda/virtual_costmap_layer/cfg/: VirtualLayer.cfg
nav_stack/src/Barakuda/virtual_costmap_layer/include/virtual_costmap_layer/: virtual_layer.hpp
nav_stack/src/Barakuda/virtual_costmap_layer/src/: virtual_layer.cpp
scripts/: README.md  generate_dome_lidar.py  install_isaac.sh  launch_nav.sh  launch_tmux.sh  run_isaacenv.py  rviz_config.rviz
terrain.generator/: README.md
terrain.generator/config/: extension.toml
terrain.generator/data/Douglas_Fir/: .collect.mapping.json  Douglas_Fir.usd
terrain.generator/data/Grass_Short_B/: .collect.mapping.json  Grass_Short_B.usd
terrain.generator/data/Gray_Birch/: .collect.mapping.json
terrain.generator/data/Holly/: .collect.mapping.json
terrain.generator/data/Norway_Spruce/: .collect.mapping.json
terrain.generator/data/Yew/: .collect.mapping.json
terrain.generator/docs/: CHANGELOG.md  README.md  index.rst
terrain.generator/terrain/generator/: __init__.py  constants.py  extension.py  generator_logic.py  terrain.py  ui_window.py  utils.py
(+189 files in other folders)
