<?xml version="1.0"?>
<package format="2">
    <name>mbf_gridmap_core</name>
    <version>0.0.0</version>
    <description>The mbf_gridmap_core package</description>

    <maintainer email="sebastien.kerbourch@ensta.fr">Seb-sti1</maintainer>

    <license>BSD-3</license>
    <author email="sebastien.kerbourch@ensta.fr">Seb-sti1</author>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>mbf_abstract_core</depend>
    <depend>grid_map_core</depend>

</package>
